# poetry-dependabot

./: README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml
