[tool.poetry]
name = "poetry-dependabot"
version = "0.1.0"
description = "A simple test for dependabot with poetry"
authors = ["Christian Polzer <Christian.Polzer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sphinx-needs = "2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
